# home_care_data

./: .gitignore  README.md  app.py  data.json  home_care_data-ca-certificate.crt  main.py  pyproject.toml
temp_data/: python-encoded.txt  temp_data.csv
