[tool.poetry]
name = "home-care-data"
version = "0.1.0"
description = ""
authors = ["oscar50 <oscar@whaleandjaguar.co>"]
readme = "README.md"
packages = [{include = "home_care_data"}]

[tool.poetry.dependencies]
python = "^3.10"
pyodbc = "^4.0.39"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
pandas = "^2.0.3"
plotly = "^5.16.0"
streamlit = "^1.25.0"
numpy = "^1.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
